--- a/pix-backend/package.json
+++ b/pix-backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pix-backend",
+  "name": "still-brushlands-43508.",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
