--- a/pix-backend/package.json
+++ b/pix-backend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "still-brushlands-43508.",
+  "name": "still-brushlands-43508",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "8.1.1",
+    "node": "12.x",
     "npm": "5.0.3"
   },
   "scripts": {
