--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SOEN-341",
+  "name": "afternoon-scrubland-61225",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
