--- a/pix-backend/package.json
+++ b/pix-backend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongo": "^0.1.0",
     "mongojs": "^2.6.0",
     "mongoose": "^5.8.12"
   }
